--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
 <!-- font links -->
 <link href='//fonts.googleapis.com/css?family=Quicksand:400,700,300' rel='stylesheet' type='text/css'>
 <link href='//fonts.googleapis.com/css?family=Cinzel:400,700,900' rel='stylesheet' type='text/css'>
+<script src="https://use.fontawesome.com/0198d2d98c.js"></script>
 <!-- /font links -->
 <!-- js files -->
 <script src="js/modernizr.custom.js"></script>
@@ -111,11 +112,11 @@
     <h3 class="text-center slideanim">Work Experience</h3>
     <div class="work-info">
       <div class="col-md-6 work-left">
-        <h4>2016 - 2018 </h4>
+        <h4>Summer 2016 </h4>
       </div>
       <div class="col-md-6 work-right">
-        <h5><span class="glyphicon glyphicon-briefcase"> </span> Brigham Young University</h5>
-        <p>MBA</p>
+        <h5><span class="glyphicon glyphicon-briefcase"> </span> Rhino Smart Labs</h5>
+        <p>Analyzed advertising campaigns and provided plan to increase average ROI to 60%</p>
       </div>
       <div class="clearfix"> </div>
     </div>
@@ -165,7 +166,7 @@
       </div>
       <div class="col-md-6 work-right">
         <h5><span class="glyphicon glyphicon-education"> </span> Brigham Young University</h5>
-        <p>Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque laudantium, totam rem aperiam, eaque ipsa quae ab illo inventore veritatis et quasi architecto beatae vitae dicta sunt explicabo </p>
+        <p> Focus on strategic issues facing Product managers when choosing target markets as well as gaining, retaining, and growing a customer base in a modern competitive global marketplace. Consulting project for a company to address an actual marketing issue in research, entry, promotion, or product management, among other topics.</p>
       </div>
       <div class="clearfix"> </div>
     </div>
@@ -175,7 +176,7 @@
       </div>
       <div class="col-md-6 work-left work-left2">
         <h5> DevMountain <span class="glyphicon glyphicon-education"></span></h5>
-        <p>Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque laudantium, totam rem aperiam, eaque ipsa quae ab illo inventore veritatis et quasi architecto beatae vitae dicta sunt explicabo </p>
+        <p>Full Stack Web Development. JavaScript, AngularJS, NodeJS, MongoDB, ExpressJS, HTML5, CSS, Firebase, Git/GitHub, Socket.io, Passport.js</p>
       </div>
       <div class="clearfix"> </div>
     </div>
@@ -185,7 +186,7 @@
       </div>
       <div class="col-md-6 work-right">
         <h5><span class="glyphicon glyphicon-education"> </span> Brigham Young University-Hawaii</h5>
-        <p>Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque laudantium, totam rem aperiam, eaque ipsa quae ab illo inventore veritatis et quasi architecto beatae vitae dicta sunt explicabo </p>
+        <p>GPA 3.8.Phi Kappa Phi, Student Vice-President of Student Honor Council, President of Accounting Society</p>
       </div>
       <div class="clearfix"> </div>
     </div>
@@ -275,38 +276,38 @@
 					</div>
 					<div>
 						<div class="content-img"><img src="images/internetbus.png" class="img-responsive" alt="my projects"></div>
-						<h3 class="content-text">Credit Card Validation</h3>
-						<p class="content-text">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book.</p>
+						<h3 class="content-text">Internet Bus</h3>
+						<p class="content-text">Internet Cafe Bus is an education non-profit organization that brings digital literacy to under-served adolescents in orphanages and public schools in former Andhra Pradesh, India. We introduce internet, it's usage, and benefits to bring them "online".</p>
 					</div>
 					<div>
 						<div class="content-img"><img src="images/todo.png" class="img-responsive" alt="my projects"></div>
-						<h3 class="content-text">Eshop Product Detail Widget</h3>
-						<p class="content-text">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book.</p>
+						<h3 class="content-text">Snap Task</h3>
+						<p class="content-text">Widget to priortize task based on Steven R Covey theory of priortization.</p>
 					</div>
 					<div>
 						<div class="content-img"><img src="images/meditation.png" class="img-responsive" alt="my projects"></div>
-						<h3 class="content-text">Model Profile Widget</h3>
-						<p class="content-text">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book.</p>
+						<h3 class="content-text">Mormon Mindfulness</h3>
+						<p class="content-text">Blog adovcating practice of meditiation for the LDS community.</p>
 					</div>
 					<div>
 						<div class="content-img"><img src="images/freeme.png" class="img-responsive" alt="my projects"></div>
-						<h3 class="content-text">Flat Under Construction</h3>
-						<p class="content-text">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book.</p>
+						<h3 class="content-text">Free Me Foundation</h3>
+						<p class="content-text">Foundation in India fouced on rural communites</p>
 					</div>
 					<div>
 						<div class="content-img"><img src="images/getgiffed.png" class="img-responsive" alt="my projects"></div>
-						<h3 class="content-text">Impressive Under Construction</h3>
-						<p class="content-text">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book.</p>
+						<h3 class="content-text">Get Giffed</h3>
+						<p class="content-text">Gif Search built with Angular Material and AngularJS<.</p>
 					</div>
 					<div>
 						<div class="content-img"><img src="images/starwars.png" class="img-responsive" alt="my projects"></div>
-						<h3 class="content-text">Profile Widget</h3>
-						<p class="content-text">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book.</p>
+						<h3 class="content-text">Star Wars App</h3>
+						<p class="content-text">Single Page Application built with NODE JS</p>
 					</div>
 					<div>
 						<div class="content-img"><img src="images/jobs.png" class="img-responsive" alt="my projects"></div>
-						<h3 class="content-text">Travel Reservation Widget</h3>
-						<p class="content-text">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book.</p>
+						<h3 class="content-text">Smart Jobs</h3>
+						<p class="content-text">Project in progress. Building OBJECT comparision tool</p>
 					</div>
 					<span class="loading"></span>
 					<span class="icon close-content"></span>
@@ -320,23 +321,31 @@
 <!-- footer -->
 <div class="contact-me" id="contact">
 	<h3 class="text-center slideanim">Contact Me</h3>
-	<p class="text-center slideanim">Lets talk! Feel free to contact me.</p>
+	<p class="text-center slideanim">Making a world a better place usually starts with small idea and one step at a time. Lets talk! Feel free to contact me.</p>
 	<div class="container">
 	<footer>
 		<div class="row">
 			<div class="col-md-12 slideanim">
 				<div class="contact-info">
 					<h4>Contact Info</h4>
-					<p>Lorem Ipsum is simply dummy text of the printing and typesetting industry.</p>
 					<div class="footer-info">
-						<div>
-							<i class="glyphicon glyphicon-phone-alt"></i>
-							<p class="p1">801-410-0008</p>
-						</div>
 						<div>
 							<i class="glyphicon glyphicon-envelope"></i>
 							<p class="p1"><a href="mailto:vijaypatha@outlook.com">vijaypatha@outlook.com</a></p>
 						</div>
+            <div class="">
+              <ul class="list-unstyled list-inline list-social-icons">
+                  <li>
+                      <a href="https://www.linkedin.com/in/vijaypatha"><i class="fa fa-linkedin-square fa-2x"></i></a>
+                  </li>
+                  <li>
+                      <a href="https://twitter.com/vjpatha"><i class="fa fa-twitter-square fa-2x"></i></a>
+                  </li>
+                  <li>
+                      <a href="https://github.com/vijaypatha"><i class="fa fa-github-square fa-2x"></i></a>
+                  </li>
+              </ul>
+            </div>
 					</div>
 				</div>
 			</div>
